--- a/JenkinsFile
+++ b/JenkinsFile
@@ -13,6 +13,7 @@ pipeline {
         stage('Run Tests') {
             steps {
                 bat 'C:\\Users\\abanach\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest --html=report.html'
+                allure includeProperties: false, jdk: '', results: [[path: 'allure-results']]
             }
         }
     }
