--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,12 +12,16 @@ pipeline {
         }
         stage('Run Tests') {
             steps {
-                bat 'C:\\Users\\abanach\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest --html=report.html'
-                allure includeProperties:
-                    false,
-                    jdk: '',
-                    results: [[path: 'allure-reports']]
-            }
+                try {
+                    bat 'C:\\Users\\abanach\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest --html=report.html'
+
+                }
+                finally {
+                    allure includeProperties:
+                        false,
+                        jdk: '',
+                        results: [[path: 'allure-reports']]
+                }
         }
     }
 
@@ -31,5 +35,6 @@ pipeline {
                          reportName: 'HTML Report',
                          reportTitles: 'Test Report'])
         }
+    }
     }
 }
