--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,7 +16,7 @@ pipeline {
                 allure includeProperties:
                     false,
                     jdk: '',
-                    results: [[path: 'target/allure-reports']]
+                    results: [[path: 'allure-reports']]
             }
         }
     }
