--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,7 +16,8 @@ pipeline {
                 allure includeProperties:
                     false,
                     jdk: '',
-                    results: [[path: 'C:\\Program Files\\Allure\\bin\\allure-reports']]
+                    report: 'Selenium/allure-report',
+                    results: [[path: 'C:\\Program Files\\Allure\\bin\\allure-results']]
             }
         }
     }
