--- a/JenkinsFile
+++ b/JenkinsFile
@@ -20,6 +20,16 @@ pipeline {
                     results: [[path: 'allure-results']]
             }
         }
+        stage('Generate Allure Report') {
+            steps {
+                allure includeProperties:
+                    false,
+                    jdk: '',
+                    properties: [],
+                    reportBuildPolicy: 'ALWAYS',
+                    results: [[path: './allure-results']]
+            }
+        }
     }
 
     post {
