--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,7 +12,7 @@ pipeline {
         }
         stage('Run Tests') {
             steps {
-                bat 'C:\\Users\\abanach\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest --html=report.html'
+                bat 'C:\\Users\\abanach\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest --html=report.html --alluredir=./allure-results'
             }
         }
         stage('Generate Allure Report') {
