--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,20 +11,19 @@ pipeline {
                 bat 'C:\\Users\\abanach\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pip install -r requirements.txt'            }
         }
         stage('Run Tests') {
-            try {
+            steps {
                 bat 'C:\\Users\\abanach\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest --html=report.html --alluredir=./allure-results'
-            } catch (Exception e) {
-                echo 'Tests failed, but continuing to generate report.'
             }
         }
-    } finally {
         stage('Generate Allure Report') {
+            steps {
                 allure includeProperties:
                     false,
                     jdk: '',
                     properties: [],
                     reportBuildPolicy: 'ALWAYS',
                     results: [[path: './allure-results']]
+            }
         }
     }
 
