--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,24 +12,30 @@ pipeline {
         }
         stage('Run Tests') {
             steps {
-              try {  
                 bat 'C:\\Users\\abanach\\AppData\\Local\\Programs\\Python\\Python312\\Scripts\\pytest --html=report.html --alluredir=./allure-results'
-            } catch (Exception e) {
-                echo 'Tests failed, but continuing to generate report.'
-            }
             }
         }
-
-    }
-
-    post {
-        always {
+        stage('Generate Allure Report') {
+            steps {
                 allure includeProperties:
                     false,
                     jdk: '',
                     properties: [],
                     reportBuildPolicy: 'ALWAYS',
                     results: [[path: './allure-results']]
+            }
+        }
+    }
+
+    post {
+        always {
+            publishHTML([allowMissing: false,
+                         alwaysLinkToLastBuild: true,
+                         keepAll: true,
+                         reportDir: '.',
+                         reportFiles: 'report.html',
+                         reportName: 'HTML Report',
+                         reportTitles: 'Test Report'])
         }
     }
 }
